--- a/src/components/AboutUs/Section44.css
+++ b/src/components/AboutUs/Section44.css
@@ -219,7 +219,7 @@
 }
 
 .testimonial-title {
-  font-family: 'Inter', sans-serif;
+  font-family: system-ui, -apple-system, sans-serif;
   font-weight: 600;
   font-size: 18px;
   line-height: 1.56;
@@ -228,7 +228,7 @@
 }
 
 .testimonial-content {
-  font-family: 'Inter', sans-serif;
+  font-family: system-ui, -apple-system, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
